user metrics. google analytics+ hotjar

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,16 @@
 <body class="mat-typography">
   <app-root></app-root>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SP6Y1E6FLB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-SP6Y1E6FLB');
+  </script>
+
   <!-- Hotjar Tracking Code for https://recipe-0tomhoyt-0tomhoyts-projects.vercel.app/ -->
   <script>
     (function(h,o,t,j,a,r){
